--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.1",
+    "openai": "^5.11.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
