--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,11 @@
     "start": "node src/server.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.14.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "socket.io": "^4.7.5",
-    "cors": "^2.8.5"
+    "prisma": "^6.14.0",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
