--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,14 @@
     "start": "node src/server.js"
   },
   "dependencies": {
-    "@prisma/client": "^6.14.0",
+    "@prisma/client": "^5.19.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "prisma": "^6.14.0",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "prisma": "^5.19.1"
   }
 }
